--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -25,16 +25,16 @@
    "source": [
     "## Background\n",
     "\n",
-    "* There are three *groups* of NFTS: Red, Blue, and Yellow.\n",
-    "* Within each group, there are two different types of NFTs, numbered 1 and 2. So there are $RED_1$, $RED_2$, $BLUE_1$, etc. \n",
-    "* Each eligible voter holds at least one of these NFTs. \n",
-    "* Overall, Red NFTs are rarest and represent the most value. Comparatively, Blue and Yellow NFTs are easier to get. \n",
-    "* However, there is no requirement that the two types of NFTs within a given \n",
-    "* The *cweight* of an individual credential is defined to be \n",
-    "$cweight = \\text{Number of Credential Holders} \\times \\text{Credential Weight}$.\n",
-    "* The *cweight* of a group of NFTs is just the sum of the *cweight* of each individual credential. \n",
-    "* **Fundamental Property:** For this example, the cweights should satisfy:\n",
-    "$$ Red cweight \\geq Blue cweight = Yellow cweight.$$ This reflects the greater insight of Red NFT holders in the community. "
+    "* There are three *stakeholder groups* in our system: Red, Blue, and Yellow. They can be identified via [Reputation Proofs](addlink), for example an ERC-1155 NFT.\n",
+    "* Within each stakeholder group, we can identify different achievements. In our example, represented by tokens, the token-Ids under one ERC-1155 contract. We give these different achievements numbers. So there are $RED_1$, $RED_2$, $BLUE_1$, $BLUE_2$, etc.\n",
+    "* Each stakeholder (or rather stakeholder wallet), holds minimum one of these achievement tokens. \n",
+    "* Overall, group Red achievement tokens are rarest, imagine we have introduced group Red just recently in our community. Comparatively, the supply of Blue and Yellow achievement tokens is much larger in our community. \n",
+    "* If we'd count only the number of achievement tokens in our voting, group Blue and Yellow would be most powerful. What if we'd like to give all groups the same voting power? We have to introduce a balancing mechanism: Dynamic Network-Weight Scaling.\n",
+    "* The *cweight* of an individual achievement is defined to be \n",
+    "$cweight = \\text{Number of Achievment Token Holders} \\times \\text{Achievemet Token Weight}$.\n",
+    "* The *cweight* of a stakeholder group is just the sum of the *cweight* of all achievement tokens (supply). \n",
+    "* **Fundamental Property:** For this example, we consider the newly created Red stakeholder group as the most relevant group for the voting. Think that they have proven most valuable achievements that matter for our voting. Thus, the cweights should satisfy:\n",
+    "$$ Red cweight \\geq Blue cweight = Yellow cweight.$$ Whatever exact vote weighting we apply, the Red stakeholder group should have most voting power. "
    ]
   },
   {
