--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -29,7 +29,7 @@
     "* Within each stakeholder group, we can identify different achievements. In our example, represented by tokens, the token-Ids under one ERC-1155 contract. We give these different achievements numbers. So there are $RED_1$, $RED_2$, $BLUE_1$, $BLUE_2$, etc.\n",
     "* Each stakeholder (or rather stakeholder wallet), holds minimum one of these achievement tokens. \n",
     "* Overall, group Red achievement tokens are rarest, imagine we have introduced group Red just recently in our community. Comparatively, the supply of Blue and Yellow achievement tokens is much larger in our community. \n",
-    "* If we'd count only the number of achievement tokens in our voting, group Blue and Yellow would be most powerful. What if we'd like to give all groups the same voting power? We have to introduce a balancing mechanism: Dynamic Network-Weight Scaling.\n",
+    "* If we'd count only the number of achievement tokens in our voting, group Blue and Yellow would be most powerful. What if we'd like to define voting power by the value of achievements, not the supply of tokens? We have to introduce a balancing mechanism: Dynamic Network-Weight Scaling.\n",
     "* The *cweight* of an individual achievement is defined to be \n",
     "$cweight = \\text{Number of Achievment Token Holders} \\times \\text{Achievemet Token Weight}$.\n",
     "* The *cweight* of a stakeholder group is just the sum of the *cweight* of all achievement tokens (supply). \n",
