--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -31,8 +31,8 @@
     "* Overall, group Red achievement tokens are rarest, imagine we have introduced group Red just recently in our community. Comparatively, the supply of Blue and Yellow achievement tokens is much larger in our community. \n",
     "* If we'd count only the number of achievement tokens in our voting, group Blue and Yellow would be most powerful. What if we'd like to define voting power by the value of achievements, not the supply of tokens? We have to introduce a balancing mechanism: Dynamic Network-Weight Scaling.\n",
     "* The *cweight* of an individual achievement is defined to be \n",
-    "$cweight = \\text{Number of Achievment Token Holders} \\times \\text{Achievemet Token Weight}$.\n",
-    "* The *cweight* of a stakeholder group is just the sum of the *cweight* of all achievement tokens (supply). \n",
+    "$cweight = \\text{Achievement Token Supply} \\times \\text{Achievement Token Weight}$.\n",
+    "* The *cweight* of a stakeholder group is the sum of the *cweight* of all achievement tokens (supply). \n",
     "* **Fundamental Property:** For this example, we consider the newly created Red stakeholder group as the most relevant group for the voting. Think that they have proven most valuable achievements that matter for our voting. Thus, the cweights should satisfy:\n",
     "$$ Red cweight \\geq Blue cweight = Yellow cweight.$$ Whatever exact vote weighting we apply, the Red stakeholder group should have most voting power. "
    ]
