--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -33,7 +33,7 @@
     "* The *cweight* of an individual achievement is defined to be \n",
     "$cweight = \\text{Achievement Token Supply} \\times \\text{Achievement Token Weight}$.\n",
     "* The *cweight* of a stakeholder group is the sum of the *cweight* of all achievement tokens (supply). \n",
-    "* **Fundamental Property:** For this example, we consider the newly created Red stakeholder group as the most relevant group for the voting. Think that they have proven most valuable achievements that matter for our voting. Thus, the cweights should satisfy:\n",
+    "* **Fundamental Property:** For this example, we consider the achievements of the newly created Red stakeholder group as most relevant for the voting. Thus, the cweights should satisfy:\n",
     "$$ Red cweight \\geq Blue cweight = Yellow cweight.$$ Whatever exact vote weighting we apply, the Red stakeholder group should have most voting power. "
    ]
   },
