--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -34,7 +34,7 @@
     "$cweight = \\text{Achievement Token Supply} \\times \\text{Achievement Token Weight}$.\n",
     "* The *cweight* of a stakeholder group is the sum of the *cweight* of all achievement tokens (supply). \n",
     "* **Fundamental Property:** For this example, we consider the achievements of the newly created Red stakeholder group as most relevant for the voting. Thus, the cweights should satisfy:\n",
-    "$$ Red cweight \\geq Blue cweight = Yellow cweight.$$ Whatever exact vote weighting we apply, the Red stakeholder group should have most voting power. "
+    "$$ Red cweight > Blue cweight = Yellow cweight.$$ Whatever exact vote weighting we apply, the Red stakeholder group should have most voting power. Blue and Yellow should have equal voting power."
    ]
   },
   {
