--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -48,8 +48,8 @@
     "\n",
     "This is input in the form of a .csv file with\n",
     "* index equal to voter IDs (e.g. wallet addresses)\n",
-    "*  columns are **RED**, **BLUE**, and **YELLOW** \n",
-    "* each entry is either 1 or 0, corresponding to ownership or non-ownership of the particular NFT. \n",
+    "* columns are indicating the achievement tokens $RED_1$, $RED_2$, $BLUE_1$, $BLUE_2$, etc. \n",
+    "* each entry is either 1 or 0, corresponding to ownership or non-ownership of the particular achievement token in the respective wallet. \n",
     "\n",
     "### Mechanics \n",
     "1. Make sure that this .ipynb file is in the same directory as the voter data. \n",
