--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "### Mechanics \n",
     "1. Make sure that this .ipynb file is in the same directory as the voter data. \n",
-    "2. To use your own data, change the value of `VOTER_INFO_FILE` from `default_voter_data.csv` to the string of your own filename. "
+    "2. To use your own data, change the value of `REPUTATION_INFO_FILE` from `default_reputation_data.csv` to the string of your own filename. "
    ]
   },
   {
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "# Code to read in a file \n",
-    "VOTER_INFO_FILE = \"default_voter_data.csv\""
+    "REPUTATION_INFO_FILE = \"default_reputation_data.csv\""
    ]
   },
   {
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Accessing Credential Information\n",
+    "## Accessing Achievement Information\n",
     "\n",
     "# TODO"
    ]
