--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -102,6 +102,19 @@
     "## Visualizing Impact of Re-weighting\n",
     "\n",
     "TODO "
+    "Wishlist: Chart based on a) dummy data to simulate the evolution of achievement token supply (including the fact that Red achievements were just recently introduced). b) we show the evolution of the voting weight for all 6 achievement tokens based on supply. c) we compare with the base weight, and 1token1vote weight in the chart. d) the dummy data should include two main events: d1) the introduction of Red achievement tokens and d2) a major increase in the $RED_1$ token supply. \n",
+   ]
+  },
+ {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Avoiding negative incentives: zero-sum games in reputation\n",
+    "\n",
+    "TODO "
+    "While re-weighting allows to increase the voting weight of our stakeholder group Red overall, it can decrease the voting weight of individual achievement tokens in certain cases. Here's why: the cweight is defined on an accumulated level, thus any individual achievement token receives a share of this voting power. The fundamental property of our system defines \n",
+    "$$Blue cweight = Yellow cweight.$$.\n",
+    "Whenever the supply of Blue or Yellow achievement tokens grows",
    ]
   },
   {
