--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "## Assigning Initial Weights\n",
     "\n",
-    "TODO "
+    "TODO: Should we skip this step for simplicity? In case yes, all achievement tokens have the same initial weight 1 (not like in TE Academy's case).  "
    ]
   },
   {
@@ -113,8 +113,11 @@
     "\n",
     "TODO "
     "While re-weighting allows to increase the voting weight of our stakeholder group Red overall, it can decrease the voting weight of individual achievement tokens in certain cases. Here's why: the cweight is defined on an accumulated level, thus any individual achievement token receives a share of this voting power. The fundamental property of our system defines \n",
-    "$$Blue cweight = Yellow cweight.$$.\n",
-    "Whenever the supply of Blue or Yellow achievement tokens grows",
+    "$$Blue cweight = Yellow cweight$$\n",
+    "Let's assume Yellow achievement tokens have a total supply of 100, and Blue achievement tokens of 40. According to Dynamic Network-Weigth Scaling, Yellow achievement tokens have a voting weight of 0.01, while Blue achievement tokens weight 0.025.\n", 
+    "What if 10 more community members acquire a Blue achievement token?\n",
+    "It's great for the community, but in fact it hurts the voting weight of the individual achievement token holders, since their voting weights shrinks down to 0.2\n",
+    "Worst case this could lead to achievement token holders keeping newcomers from acquiring new achievements. How can we avoid these effects?\n",
    ]
   },
   {
