--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -101,23 +101,24 @@
    "source": [
     "## Visualizing Impact of Re-weighting\n",
     "\n",
-    "TODO "
-    "Wishlist: Chart based on a) dummy data to simulate the evolution of achievement token supply (including the fact that Red achievements were just recently introduced). b) we show the evolution of the voting weight for all 6 achievement tokens based on supply. c) we compare with the base weight, and 1token1vote weight in the chart. d) the dummy data should include two main events: d1) the introduction of Red achievement tokens and d2) a major increase in the $RED_1$ token supply. \n",
+    "TODO ",
+    "Wishlist: Chart based on a) dummy data to simulate the evolution of achievement token supply (including the fact that Red achievements were just recently introduced). b) we show the evolution of the voting weight for all 6 achievement tokens based on supply. c) we compare with the base weight, and 1token1vote weight in the chart. d) the dummy data should include two main events: d1) the introduction of Red achievement tokens and d2) a major increase in the $RED_1$ token supply. \n"
    ]
   },
- {
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Avoiding negative incentives: zero-sum games in reputation\n",
     "\n",
-    "TODO "
+    "TODO ",
     "While re-weighting allows to increase the voting weight of our stakeholder group Red overall, it can decrease the voting weight of individual achievement tokens in certain cases. Here's why: the cweight is defined on an accumulated level, thus any individual achievement token receives a share of this voting power. The fundamental property of our system defines \n",
     "$$Blue cweight = Yellow cweight$$\n",
     "Let's assume Yellow achievement tokens have a total supply of 100, and Blue achievement tokens of 40. According to Dynamic Network-Weigth Scaling, Yellow achievement tokens have a voting weight of 0.01, while Blue achievement tokens weight 0.025.\n", 
     "What if 10 more community members acquire a Blue achievement token?\n",
     "It's great for the community, but in fact it hurts the voting weight of the individual achievement token holders, since their voting weights shrinks down to 0.2\n",
-    "Worst case this could lead to achievement token holders keeping newcomers from acquiring new achievements. How can we avoid these effects?\n",
+    "Worst case this could lead token holders to keeping newcomers from gaining acquiring new achievements. Bad for the community! How can we avoid these effects?\n",
+    "TODO: Find zero-sum balancer ",
    ]
   },
   {
