--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "# Code to read in a file \n",
-    "REPUTATION_INFO_FILE = \"default_reputation_data.csv\""
+    "REPUTATION_INFO_FILE = \"default_reputation_data.csv\"
    ]
   },
   {
