--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "## Assigning Initial Weights\n",
     "\n",
-    "TODO: Should we skip this step for simplicity? In case yes, all achievement tokens have the same initial weight 1 (not like in TE Academy's case).  "
+    "TODO: Should we skip this step for simplicity? In case yes, all achievement tokens have the same initial weight 1 (not like in TE Academy's case).\n",
    ]
   },
   {
@@ -102,7 +102,7 @@
     "## Visualizing Impact of Re-weighting\n",
     "\n",
     "TODO ",
-    "Wishlist: Chart based on a) dummy data to simulate the evolution of achievement token supply (including the fact that Red achievements were just recently introduced). b) we show the evolution of the voting weight for all 6 achievement tokens based on supply. c) we compare with the base weight, and 1token1vote weight in the chart. d) the dummy data should include two main events: d1) the introduction of Red achievement tokens and d2) a major increase in the $RED_1$ token supply. \n"
+    "Wishlist: Chart based on a) dummy data to simulate the evolution of achievement token supply (including the fact that Red achievements were just recently introduced). b) we show the evolution of the voting weight for all 6 achievement tokens based on supply. c) we compare with the base weight, and 1token1vote weight in the chart. d) the dummy data should include two main events: d1) the introduction of Red achievement tokens and d2) a major increase in the $RED_1$ token supply. \n",
    ]
   },
   {
