--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -127,16 +127,20 @@
       "source": [
         "## Choosing a Voting Mechanism\n",
         "\n",
-        "TODO"
+        "TODO: Elaborate on combination of weighting mechanism and voting rule, demo two options to show the effects. Refer to GovXS evaluation framework."
+        "TODO: a) Plurality voting (aka Single choice voting in Snapshot)"
+        "TODO: a) Quadratic voting (aka Quadratic Voting in Snapshot)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Requirement Analysis\n",
+        "## Meeting requirements\n",
         "\n",
-        "TODO"
+        "TODO: a) Monitor dictatorship: Nakamoto Coefficient\n",
+        "TODO: b) Avoid unexpected results: Condorcet Paradox\n",
+
       ]
     }
   ],
