--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -127,9 +127,9 @@
       "source": [
         "## Choosing a Voting Mechanism\n",
         "\n",
-        "TODO: Elaborate on combination of weighting mechanism and voting rule, demo two options to show the effects. Refer to GovXS evaluation framework."
-        "TODO: a) Plurality voting (aka Single choice voting in Snapshot)"
-        "TODO: a) Quadratic voting (aka Quadratic Voting in Snapshot)"
+        "TODO: Elaborate on combination of weighting mechanism and voting rule, demo two options to show the effects. Refer to GovXS evaluation framework.\n",
+        "TODO: a) Plurality voting (aka Single choice voting in Snapshot)\n",
+        "TODO: a) Quadratic voting (aka Quadratic Voting in Snapshot)\n",
       ]
     },
     {
