--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -118,7 +118,7 @@
         "What if 10 more community members acquire a Blue achievement token?\n",
         "It's great for the community, but in fact it hurts the voting weight of the individual achievement token holders, since their voting weights shrinks down to 0.2\n",
         "Worst case this could lead token holders to keeping newcomers from gaining acquiring new achievements. Bad for the community! How can we avoid these effects?\n",
-        "TODO: Find zero-sum balancer"
+        "TODO: Find zero-sum balancer\n",
       ]
     },
     {
