--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -118,7 +118,7 @@
         "What if 10 more community members acquire a Blue achievement token?\n",
         "It's great for the community, but in fact it hurts the voting weight of the individual achievement token holders, since their voting weights shrinks down to 0.2\n",
         "Worst case this could lead token holders to keeping newcomers from gaining acquiring new achievements. Bad for the community! How can we avoid these effects?\n",
-        "TODO: Find zero-sum balancer\n",
+        "TODO: Find zero-sum balancer\n"
       ]
     },
     {
@@ -129,7 +129,7 @@
         "\n",
         "TODO: Elaborate on combination of weighting mechanism and voting rule, demo two options to show the effects. Refer to GovXS evaluation framework.\n",
         "TODO: a) Plurality voting (aka Single choice voting in Snapshot)\n",
-        "TODO: a) Quadratic voting (aka Quadratic Voting in Snapshot)\n",
+        "TODO: a) Quadratic voting (aka Quadratic Voting in Snapshot)\n"
       ]
     },
     {
@@ -139,14 +139,14 @@
         "## Meeting requirements\n",
         "\n",
         "TODO: a) Monitor dictatorship: Nakamoto Coefficient\n",
-        "TODO: b) Avoid unexpected results: Condorcet Paradox\n",
+        "TODO: b) Avoid unexpected results: Condorcet Paradox\n"
       ]
-    },
-    {
+    }
+  ],
   "metadata": {
     "language_info": {
       "name": "python"
-    },
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 2
