--- a/notebooks/demonstration.ipynb
+++ b/notebooks/demonstration.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Demonstration of Dynamic Network Weighting\n",
+        "# Demonstration of Dynamic Network-Weight Scaling\n",
         "\n",
         "TODO: Consider changing title."
       ]
