Small updates to the reweighting techniques notebook.

--- a/notebooks/reweighting-techniques-demonstration.ipynb
+++ b/notebooks/reweighting-techniques-demonstration.ipynb
@@ -204,6 +204,10 @@
    "outputs": [],
    "source": [
     "def is_green_voter(voter_info: pd.Series):\n",
+    "    \"\"\"\n",
+    "    An indicator function: returns 1 if the voter has all blue and yellow NFTs\n",
+    "    0 if not. \n",
+    "    \"\"\"\n",
     "    is_green = int(voter_info[[\"blue_1\", \"blue_2\", \"yellow_1\", \"yellow_2\"]].all())\n",
     "    return is_green"
    ]
